1999-02-02  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* about.cc (handle_configure_event): Made to a static member.

	* glclock.h (class about_dialog): Add static members.

	* about.cc (handle_ok): Made to a static member.
	(show): Handle the case of parent == NULL.
	(handle_delete_event): New method.
	(about_dialog): Connect "delete_event" to the handler.

	* glclock.cc (describe): Use about_dialog.

	* about.cc (handle_ok): Renamed from ok.
	(about_dialog, ~about_dialog, show): New methods, replacing
	show_about.
	(populate): New function.
	(show_about): Removed.

	* glclock.h (class about_dialog): New class.

	* NEWS: Updated.
	* README: Updated.
	* TODO: Updated.

1999-02-01  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 1.2.1.

	* AUTHORS: Update text.
	* NEWS: Update text.
	* README: Update text.
	* TODO: Update text.

1999-01-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* rglclock.1: Update text.

	* about.cc (show_about): Set padding for the label.

	* about.cc: #include "glclock.h".
	* glclock.cc: Remove delaration of show_about.
	* glclock.h: Declare show_about.

	* about.cc (show_about): Disallow the dialog resize.
	(show_about): Update the label text.
	(show_about): Use gtk_box_pack_start.
	[ENABLE_TRANSIENT_FOR_HINT]: #include <gdk/gdkx.h>.
	[ENABLE_TRANSIENT_FOR_HINT] (handle_configure_event): New
	function.
	(show_about) [ENABLE_TRANSIENT_FOR_HINT]: Connect
	"configure_event" to its handler.

	* simple.c (simple_draw_clock): Use gettimeofday if available.

1999-01-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot): New target.

	* simple.c (simple_draw_clock): Modify the look.
	(simple_draw_clock): Fix the test condition.

1999-01-25  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* simple.c (simple_draw_clock): Mark every hours.

	* glclock.cc (describe): Add a call to show_about.

	* Makefile.am (rglclock_SOURCES): Add about.cc.
	* about.cc: New file.
